# dotfiles

./: .editorconfig  .gitignore  .prettierignore  .yamllint  AGENTS.md  DOLT_REMOTE.md  Makefile  README.md  Taskfile.darwin.yaml  Taskfile.dist.yaml  ai.yaml  archlinux.yml  base.yaml  base.yml  darwin.yaml  darwin.yml  desktop.yml  dev.yml  dprint.json  i3.yml  install  install.conf.yaml  install.conf.yml  laptop.yml  lefthook.yaml  mac.yml  manifest  mise.dotfiles.toml  mise.toml  requirements.txt  thinkpad.yaml  uninstall.py  vmguest.yaml  vmguest.yml  x11.yaml  x11.yml  xfce.yml
ai/: AGENTS.md  README.md
ai/gascity/sidecar/: com.gascity.sidecar.plist  launchd-run.sh  pyproject.toml
ai/gascity/sidecar/src/gascity_sidecar/: __init__.py  admission.py  api.py  cli.py  config.py  control.py  events.py  gascity.py  logging_setup.py  main.py  models.py  notifications.py  state.py
ai/gascity/sidecar/src/gascity_sidecar/backlog/: __init__.py  base.py  beads.py  markdown.py
ai/gascity/sidecar/tests/: test_beads.py  test_bootstrap.py  test_control.py  test_events.py  test_gascity_dispatch.py  test_gc15_api.py  test_gc15_smoke.py  test_markdown.py  test_operator_ui.py  test_sidecar.py  test_writeback.py
ai/gascity/sidecar/tests/fixtures/: duplicate-id.md  malformed.md  missing-dependency.md  slug-collision.md
base/: .aliases  .bash_profile  .bashrc  .dircolors  .editorconfig  .profile  .tmux.conf  .vimrc  .vimrc.bundles  .zshrc  example.env  example.envrc
darwin/: .aerospace.toml  .gitconfig  .gitignore  .zprofile  .zshrc.darwin  Brewfile  Brewfile.optional  brew.sh  nix.sh  setup.sh
dev/: .iex.exs  .zshrc.dev
i3/: .i3profile  (+2 more)
(+340 files in other folders)
