[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gascity-sidecar"
version = "0.1.0"
description = "Standalone Gas City backlog source adapters"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/gascity_sidecar"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
