[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gascity-sidecar"
version = "0.1.0"
description = "Standalone Gas City backlog source adapters"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.6,<3",
  "uvicorn>=0.34,<1",
]
[project.scripts]
gascity-sidecar = "gascity_sidecar.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/gascity_sidecar"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
